--- a/src/SimplifiedSiMA/.classpath
+++ b/src/SimplifiedSiMA/.classpath
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CognitiveAgentFramework"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/apache-log4j-1.2.17/apache-log4j-extras-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/jansi-1.11.jar"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/slf4j-1.7.5/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/slf4j-1.7.5/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Projekte/13_CognitiveArchitectureFramework/cognitivearchitectureframework/libs/commonutils/commonutils.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
